# boccherini-quartet-data

./: .gitignore  README.md  pyproject.toml
docs/: beyond_imslp.md  bio.md  extraction_plan.md
lilypond/: Makefile  README.md
lilypond/Op02-1/: 00-Score.ly  01-V1-1.ily  01-V1-2.ily  01-V1-3.ily  01-Violon1.ly  02-V2-1.ily  02-V2-2.ily  02-V2-3.ily  02-Violon2.ly  03-A-1.ily  03-A-2.ily  03-A-3.ily  03-Alto.ly  04-Vc-1.ily  04-Vc-2.ily  04-Vc-3.ily  04-Violoncelle.ly  Global.ily  Midi.ly  Trame.ily
lilypond/Op02-2/: 00-Score.ly  01-V1-1.ily  01-V1-2.ily  01-V1-3.ily  01-Violon1.ly  02-V2-1.ily  02-V2-2.ily  02-V2-3.ily  02-Violon2.ly  03-A-1.ily  03-A-2.ily  03-A-3.ily  03-Alto.ly  04-Vc-1.ily  04-Vc-2.ily  04-Vc-3.ily  04-Violoncelle.ly  Global.ily  Midi.ly  Trame.ily
lilypond/Op02-3/: 00-Score.ly  01-V1-1.ily  01-V1-2.ily  01-V1-3.ily  01-Violon1.ly  02-V2-1.ily  02-V2-2.ily  02-V2-3.ily  02-Violon2.ly  03-A-1.ily  03-A-2.ily  03-A-3.ily  03-Alto.ly  04-Vc-1.ily  04-Vc-2.ily  04-Vc-3.ily  04-Violoncelle.ly  Global.ily  Midi.ly  Trame.ily
lilypond/Op02-4/: 00-Score.ly  01-V1-1.ily  01-V1-2.ily  01-V1-3.ily  01-Violon1.ly  02-V2-1.ily  02-V2-2.ily  02-V2-3.ily  02-Violon2.ly  03-A-1.ily  03-A-2.ily  03-A-3.ily  03-Alto.ly  04-Vc-1.ily  04-Vc-2.ily  04-Vc-3.ily  04-Violoncelle.ly  Global.ily  Midi.ly  Trame.ily
scripts/: extract_tempos.py  find_tracks.py  generate_midi_ly.py  join.py  json_to_md.py  rename_lilypond.py  run_pipeline.sh  sheets_to_movements.py  sheets_to_quartets.py  tempo_mapping.json
src/: footer.md  header.md  mvmts.md  quartets.csv
(+1295 files in other folders)
