[project]
name = "boccherini-quartets"
version = "0.1.0"
description = "String quartet catalog data management"
requires-python = ">=3.10"
dependencies = [
    "spotipy>=2.23.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
]
extraction = [
    "pymupdf>=1.23.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
    "anthropic>=0.18.0",
]
